@@ -1,3 +1,12 @@
+2004-01-18  Jeremy Simon <jesimon@libertysurf.fr>
+
+	* configure.ac:
+	* ext/Makefile.am:
+	* ext/musicbrainz/gsttrm.c:
+	* ext/musicbrainz/gsttrm.h:
+	* ext/musicbrainz/Makefile.am:
+	Add a trm plugin 
+
 2004-01-18  Julien MOUTTE  <julien@moutte.net>
 
 	* sys/ximage/ximagesink.c: (gst_ximagesink_set_property),
